Fix timeline view not working properly since refactor